--- a/Winterwerp1998-Model-Fitting.ipynb
+++ b/Winterwerp1998-Model-Fitting.ipynb
@@ -46,9 +46,7 @@
     "from scipy.integrate import odeint\n",
     "from scipy.optimize import curve_fit\n",
     "import pandas as pd\n",
-    "import waterprop as wp\n",
-    "# from waterprop import density\n",
-    "# from waterprop import visc"
+    "import waterprop as wp"
    ]
   },
   {
