Notebook to find Ka and Kb in the W98 model using experimental data

--- a/Winterwerp1998-Model-Fitting.ipynb
+++ b/Winterwerp1998-Model-Fitting.ipynb
@@ -295,18 +295,17 @@
     "G = 35.          # turbulent shear rate[s-1]\n",
     "To = 20          # temperature in degC\n",
     "Sppt = 0         # salinity in parts per thousand \n",
-    "#mu = 1.002e-3    # dynamic viscosity @ 20 degC [N s m-2]\n",
     "\n",
     "# Sediment properties\n",
     "C = 50/10**3     # suspended sediment concentration [g/L]\n",
     "Dp = 7/10**6     # primary particle size [m]\n",
     "Fy = 1e-10       # floc yeild strength [N]\n",
     "rhos = 2500.     # sediment density [kg/m3]\n",
+    "nf = 2.0         # fractal dimension\n",
     "\n",
     "# Calculation inputs \n",
     "tstart_min = 1   # minute to start the integration at\n",
     "D0 = 20/10**6    # floc size at tstart_min [m]\n",
-    "nf = 2.          # fractal dimension\n",
     "Npts = 10000     # number of points in calculation\n",
     "\n",
     "# initial guess for fit values (change if there are convergence issues) \n",
